--- a/qr.css
+++ b/qr.css
@@ -6,10 +6,9 @@ body {
   
   font-family: 'Outfit', sans-serif;
   background-color: hsl(212, 45%, 89%);
-  height: 100vh;
+  min-height: 100vh;
   display: flex;justify-content: center; align-items: center;
-
-  display: flex;justify-content: center; align-items: center;
+align-items: center;
 }
 
 img {
