--- a/qr.css
+++ b/qr.css
@@ -8,6 +8,7 @@ body {
   background-color: hsl(212, 45%, 89%);
   min-height: 100vw;
   display: flex;justify-content: center; align-items: center;
+  flex-direction: column;
 
 }
 
@@ -30,9 +31,9 @@ position: relative; left: 22px;
 padding-bottom: 50px; opacity: 0.9;
 }
 
-.QR-project{margin: 50px; }
+.QR-project{margin: 50px; display: inline-block;} 
 
-.attribution{margin-top: 20px; position: relative; left: 35px;}
+
 
 
 /* Utility */
