--- a/qr.css
+++ b/qr.css
@@ -2,17 +2,19 @@
 padding: 0;
 margin: 0;}
 
-:root {--light-blue: hsl(212, 45%, 89%);}
-:root {--dark-blue: hsl(218, 44%, 22%);}
-:root {--grayish-blue: hsl(216, 15%, 48%);}
-:root {--white: hsl(0, 0%, 100%);}
+:root {--light-blue: hsl(212, 45%, 89%);
+   --dark-blue: hsl(218, 44%, 22%);
+  --grayish-blue: hsl(216, 15%, 48%);
+--white: hsl(0, 0%, 100%);}
+
+
 
 body {
   
   font-family: 'Outfit', sans-serif;
   background-color: var(--light-blue);
   min-height: 100vh;
-  display: flex;justify-content: center; align-items: center;
+  display: flex; justify-content: center; align-items: center;
   flex-direction: column;
 
 }
@@ -25,20 +27,22 @@ img {
 
 .QR-image  img{border-radius: 16px;}
 
-.QR-CH .QR-Header{padding-top: 30px;
-padding-bottom: 25px; margin-inline-start: 2.5em; }
+.QR-CH .QR-Header{padding: 30px 0 25px 0;
+ margin-inline: 2.5em 0; }
 
 
 
 
 .QR-CH  .QR-par {
-margin-inline-start: 2.5em; 
-padding-inline-start: 0.2em; padding-inline-end: 0.2em; padding-bottom: 1.5em; opacity: 0.9;
+margin-inline: 2.5em 0; 
+padding-inline: 0.2em; 
+padding-block-end: 1.5em;
+ opacity: 0.9;
 }
 
-.QR-project{margin: 50px; height: 50em;} 
+.QR-project{margin: 50px; min-height: 50em;} 
 
-.QR-CH{height: 52em;}
+.QR-CH{min-height: 52em;}
 
 
 /* Utility */
