--- a/qr.css
+++ b/qr.css
@@ -40,24 +40,31 @@ padding-block-end: 1.5em;
  opacity: 0.9;
 }
 
-.QR-project{margin: 50px; min-height: 50em;} 
+.QR-project{ min-height: 50em;} 
 
 .QR-CH{min-height: 52em;}
 
+.attribution {
+  font-size: 0.8em;
+ margin-inline-end: 7em;
+ font-size: 1em;
+ padding-block-start: 2em;
 
+}
 /* Utility */
 
 
-
+/*medeia queries*/
+@media (max-width: 600px) {.QR-project {margin: 1.5rem; height: 30em 30em;}; .QR-CH{min-height: 18em}}
 
 /*container*/
-.container {max-width: 500px;
+.container {max-width: clamp(300px, 100%, 500px);
   background-color: var(--white);
   padding: 23px;  border-radius: 24px;
 
 }
 
-.container-sm{max-width: 400px;}
+.container-sm{max-width: clamp(250px, 80vw, 400px);}
 
 
 /*texts*/
