--- a/qr.css
+++ b/qr.css
@@ -55,7 +55,7 @@ padding-block-end: 1.5em;
 
 
 /*medeia queries*/
-@media (max-width: 600px) {.QR-project {margin: 1.5rem; height: 30em 30em;}; .QR-CH{min-height: 18em}}
+@media  (max-width: 600px) {.QR-project {margin: 1.5rem; min-height: 20em ;}; .QR-CH{min-height: 18em} .QR-Header{margin-inline: 1.5em;}}
 
 /*container*/
 .container {max-width: clamp(300px, 100%, 500px);
