--- a/qr.css
+++ b/qr.css
@@ -55,7 +55,10 @@ padding-block-end: 1.5em;
 
 
 /*medeia queries*/
-@media  (max-width: 600px) {.QR-project {margin: 1.5rem; min-height: 20em ;}; .QR-CH{min-height: 18em} .QR-Header{margin-inline: 1.5em;}}
+@media  (max-width: 600px) 
+{.QR-project {margin: 1.5rem; min-height: 20em ;};
+ .QR-CH{min-height: 18em} 
+ .QR-Header{margin-inline: 1.5em; padding: 15px 0 10px;}}
 
 /*container*/
 .container {max-width: clamp(300px, 100%, 500px);
